(chores) camel-core: use the standard charsets constants