@@ -17,6 +17,7 @@
 package org.apache.camel.component.language;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import org.apache.camel.ContextTestSupport;
 import org.apache.camel.builder.RouteBuilder;
@@ -39,7 +40,7 @@ public class LanguageRouteTest extends ContextTestSupport {
             @Override
             public void configure() throws Exception {
                 // START SNIPPET: e1
-                String script = URLEncoder.encode("Hello ${body}", "UTF-8");
+                String script = URLEncoder.encode("Hello ${body}", StandardCharsets.UTF_8);
                 from("direct:start").to("language:simple:" + script).to("mock:result");
                 // END SNIPPET: e1
             }
