@@ -20,6 +20,7 @@ import java.io.File;
 import java.io.InputStream;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -159,7 +160,7 @@ public class ConverterTest extends TestSupport {
     public void testFileToString() throws Exception {
         URL resource = getClass().getResource("dummy.txt");
         assertNotNull(resource, "Cannot find resource!");
-        File file = new File(URLDecoder.decode(resource.getFile(), "UTF-8"));
+        File file = new File(URLDecoder.decode(resource.getFile(), StandardCharsets.UTF_8));
         String text = converter.convertTo(String.class, file);
         assertNotNull(text, "Should have returned a String!");
         text = text.trim();
